[gd_scene load_steps=4 format=3 uid="uid://dy8hv42uw38ce"]

[ext_resource type="Script" uid="uid://cyxd8md7y3lyx" path="res://Features/Toasts/Dialogs/toast_dialog.gd" id="1_3xme6"]
[ext_resource type="Script" uid="uid://ckhevounoe7f4" path="res://Scenes/fadeable_panel_container.gd" id="2_dqplu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1w6v2"]

[node name="ToastDialog" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_3xme6")
push_speed = 48.0

[node name="FadeablePanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1w6v2")
script = ExtResource("2_dqplu")
metadata/_custom_type_script = "uid://ckhevounoe7f4"

[node name="HBoxContainer" type="HBoxContainer" parent="FadeablePanelContainer"]
custom_minimum_size = Vector2(640, 1080)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="FadeablePanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(640, 1080)
layout_mode = 2
theme_override_constants/margin_top = 0

[node name="ToastContainer" type="VBoxContainer" parent="FadeablePanelContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(640, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[connection signal="on_faded_in" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_faded_in"]
[connection signal="on_faded_out" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_faded_out"]
[connection signal="on_fading_in" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_fading_in"]
[connection signal="on_fading_out" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_fading_out"]
